@@ -28,4 +28,5 @@
 \input{\dir/glum_api.tex}
 \input{\dir/glide_api.tex}
 \input{\dir/glint_api.tex}
+\bibliography{glimmer}
 \end{document}
